Added first PowerUp (live PowerUp)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ set (PROJECT_SOURCES
       TextureManager.cpp
       Highscore.cpp
       StateManager.cpp
+      LivePowerUp.cpp
       Game.cpp
     )
 
@@ -30,6 +31,7 @@ set (PROJECT_LIB_SOURCES
       TextureManager.cpp
       Highscore.cpp
       StateManager.cpp
+      LivePowerUp.cpp
       Game.cpp
     )
 
@@ -45,6 +47,7 @@ set (PROJECT_HEADERS
       ../include/Highscore.h
       ../include/GameState.h
       ../include/StateManager.h
+      ../include/LivePowerUp.h
       ../include/Game.h
     )
 
